Tue Nov  5 21:21:47 2013  Tanaka Akira  <akr@fsij.org>

	* test/ruby/test_thread.rb (test_thread_join_in_trap):
	  Run the test in a different process.

Tue Nov  5 20:14:32 2013  Masaya Tarui  <tarui@ruby-lang.org>

	* gc.c (is_live_object): A hidden object may be a live object.
	  [ruby-dev:47788] [Bug #9072]

Tue Nov  5 13:37:19 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: add support to estimate increase of oldspace memory usage.
	  This is another approach to solve an issue discussed at r43530.
	  This feature is disabled as default.

	  This feature measures an increment of memory consumption by oldgen
	  objects. It measures memory consumption for each objects when
	  the object is promoted. However, measurement of memory consumption
	  is not accurate now. So that this measurement is `estimation'.

	  To implement this feature, move memsize_of() function from
	  ext/objspace/objspace.c and expose rb_obj_memsize_of().

	  Some memsize() functions for T_DATA (T_TYPEDDATA) have problem to
	  measure memory size, so that we ignores T_DATA objects now.
	  For example, some functions skip NULL check for pointer.

	  The macro RGENGC_ESTIMATE_OLDSPACE enables/disables this feature,
	  and turned off as default.

	  We need to compare 3gen GC and this feature carefully.
	  (it is possible to enable both feature)
	  We need a help to compare them.

	* internal.h: expose rb_obj_memsize_of().

	* ext/objspace/objspace.c: use rb_obj_memsize_of() function.

	* cont.c (fiber_memsize): fix to check NULL.

	* variable.c (autoload_memsize): ditto.

	* vm.c (vm_memsize): ditto.

Tue Nov  5 04:03:07 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (GC_MALLOC_LIMIT_MAX): fix default value 512MB -> 384MB.
	  512MB is huge.

Tue Nov  5 03:31:23 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: add 3gen GC patch, but disabled as default.

	  RGenGC is designed as 2 generational GC, young and old generation.
	  Young objects will be promoted to old objects after one GC.